--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "testEnvironment": "node",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,11 +11,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.22.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@firebase/app": "^0.9.12",
+    "@firebase/firestore": "^3.12.2",
     "@mui/material": "^5.11.16",
+    "babel-jest": "^29.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
