--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-jest": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.13.0",
     "ts-jest": "^29.1.0"
   },
   "devDependencies": {
