update firebase packages

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@babel/preset-env": "^7.22.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@firebase/app": "^0.9.12",
     "@firebase/auth": "^1.0.0",
-    "@firebase/firestore": "^3.12.2",
+    "@firebase/firestore": "^4.0.0",
     "@mui/material": "^5.11.16",
     "babel-jest": "^29.5.0",
+    "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
