--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@firebase/firestore": "^3.12.2",
     "@mui/material": "^5.11.16",
     "babel-jest": "^29.5.0",
+    "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
